fix: upgrade gravitee dependencies
BREAKING CHANGE: this plugin now requires java 21