@@ -1,11 +1,11 @@
-/**
- * Copyright (C) 2015 The Gravitee team (http://gravitee.io)
+/*
+ * Copyright © 2015 The Gravitee team (http://gravitee.io)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *         http://www.apache.org/licenses/LICENSE-2.0
+ *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -182,7 +182,7 @@ public class EmailNotifier extends AbstractConfigurableNotifier<EmailNotifierCon
         final List<Element> resources = imageElements
             .stream()
             .filter(imageElement -> imageElement.hasAttr("src") && !imageElement.attr("src").startsWith("http"))
-            .collect(toList());
+            .toList();
 
         if (!resources.isEmpty()) {
             final List<MailAttachment> mailAttachments = new ArrayList<>(resources.size());
